tests/golden/type_errors/generic_struct_invariant.cd
struct Box<T> { value: T }

let numberBox: Box<number> = Box { value: 1 };
let textBox: Box<string> = numberBox;
