tests/golden/type_errors/generic_struct_invariant.err
Type error at 4:5: cannot initialize `textBox` of type Box<string> with Box<number>
  let textBox: Box<string> = numberBox;
      ^
